--- a/aboutus.html
+++ b/aboutus.html
@@ -332,8 +332,8 @@
                   Campbell, ACT 2612
                 </p>
                 <div class="mt-5"></div>
-                <a href="mailto:enquiries@fiveeyes.com.au" class="footer__label"
-                  data-animation="paragraph">enquiries@fiveeyes.com.au</a>
+                <a href="mailto:contact@fiveeyes.com.au" class="footer__label"
+                  data-animation="paragraph">contact@fiveeyes.com.au</a>
               </div>
 
               <div class="footer__socials">
@@ -358,8 +358,8 @@
               <div class="footer__email">
                 <p class="footer__title" data-animation="paragraph">Email</p>
 
-                <a href="mailto:enquiries@fiveeyes.com.au" class="footer__label"
-                  data-animation="paragraph">enquiries@fiveeyes.com.au</a>
+                <a href="mailto:contact@fiveeyes.com.au" class="footer__label"
+                  data-animation="paragraph">contact@fiveeyes.com.au</a>
               </div>
 
               <div class="footer__partners">
