--- a/blog-post.html
+++ b/blog-post.html
@@ -37,12 +37,13 @@
           <a href="/">
             <img src="./assets/logo.png" alt="Five Eyes Logo" class="navigation__logo__dark" /></a>
 
-          <div class="navigation__links">
-            <a href="./aboutus.html" class="navigation__link">About Us</a><a href="./careers.html"
-              class="navigation__link">Careers</a><a href="./contactus.html" class="navigation__link">Contact Us</a><a
-              href="./news.html" class="navigation__link">News</a>
-            <a href="mailto:enquiries@fiveeyes.com.au" class="navigation__button">Get in touch</a>
-          </div>
+            <div class="navigation__links">
+              <a href="./aboutus.html" class="navigation__link">About Us</a>
+              <a href="./services.html" class="navigation__link">Services</a>
+              <a href="./careers.html" class="navigation__link">Careers</a>
+              <a href="./news.html" class="navigation__link">News</a>
+              <a href="./contactus.html" class="navigation__link">Contact Us</a>
+            </div>
         </nav>
 
         <div class="content" data-template="post">
@@ -150,6 +151,9 @@
                 <p class="footer__label" data-animation="paragraph">
                   Campbell, ACT 2612
                 </p>
+                <div class="mt-5"></div>
+                <a href="mailto:contact@fiveeyes.com.au" class="footer__label"
+                  data-animation="paragraph">contact@fiveeyes.com.au</a>
               </div>
 
               <div class="footer__socials">
@@ -157,7 +161,25 @@
                   Social Media
                 </p>
 
-                <a href="#" class="footer__label" data-animation="paragraph">LinkedIn</a>
+
+
+                <div data-animation="paragraph">
+                  <a href="https://facebook.com/" target="_blank" class="footer__label">
+                    <i class="fa-brands fa-facebook-square"></i>
+                  </a>
+
+                  <a href="https://linkedin.com/" target="_blank" class="footer__label">
+                    <i class="fa-brands fa-linkedin"></i>
+                  </a>
+                </div>
+
+              </div>
+
+              <div class="footer__email">
+                <p class="footer__title" data-animation="paragraph">Email</p>
+
+                <a href="mailto:contact@fiveeyes.com.au" class="footer__label"
+                  data-animation="paragraph">contact@fiveeyes.com.au</a>
               </div>
 
               <div class="footer__partners">
@@ -170,22 +192,11 @@
                     crossorigin="anonymous" />
                   <img class="footer__images__grid__image" src="./assets/microsoft.png" alt="Cisco"
                     crossorigin="anonymous" />
-                  <img class="footer__images__grid__image" src="./assets/aws.png" alt="Cisco" crossorigin="anonymous" />
-                </div>
-              </div>
-
-              <div class="footer__sponsors">
-                <p class="footer__title" data-animation="paragraph">
-                  Sponsors
-                </p>
-
-                <div class="footer__images__grid">
-                  <img class="footer__images__grid__image" src="./assets/solderOn.png" alt="Cisco"
-                    crossorigin="anonymous" />
-                  <img class="footer__images__grid__image" src="./assets/npca.png" alt="Cisco"
+                  <img class="footer__images__grid__image" src="./assets/amazon.png" alt="Cisco"
                     crossorigin="anonymous" />
                 </div>
               </div>
+
             </div>
           </footer>
         </div>
