--- a/careers.html
+++ b/careers.html
@@ -64,7 +64,7 @@
             </div>
 
             <!-- <div class="careers__grid">
-              <a href="mailto:enquiries@fiveeyes.com.au" class="careers__grid__item">
+              <a href="mailto:contact@fiveeyes.com.au" class="careers__grid__item">
                 <div class="careers__grid__item__info">
                   <div class="careers__grid__item__info__headers">
                     <h3 class="careers__grid__item__header" data-animation="paragraph">
@@ -82,7 +82,7 @@
 
                 <span class="careers__grid__item__line"></span>
               </a>
-              <a href="mailto:enquiries@fiveeyes.com.au" class="careers__grid__item">
+              <a href="mailto:contact@fiveeyes.com.au" class="careers__grid__item">
                 <div class="careers__grid__item__info">
                   <div class="careers__grid__item__info__headers">
                     <h3 class="careers__grid__item__header" data-animation="paragraph">
@@ -100,7 +100,7 @@
 
                 <span class="careers__grid__item__line"></span>
               </a>
-              <a href="mailto:enquiries@fiveeyes.com.au" class="careers__grid__item">
+              <a href="mailto:contact@fiveeyes.com.au" class="careers__grid__item">
                 <div class="careers__grid__item__info">
                   <div class="careers__grid__item__info__headers">
                     <h3 class="careers__grid__item__header" data-animation="paragraph">
@@ -118,7 +118,7 @@
 
                 <span class="careers__grid__item__line"></span>
               </a>
-              <a href="mailto:enquiries@fiveeyes.com.au" class="careers__grid__item">
+              <a href="mailto:contact@fiveeyes.com.au" class="careers__grid__item">
                 <div class="careers__grid__item__info">
                   <div class="careers__grid__item__info__headers">
                     <h3 class="careers__grid__item__header" data-animation="paragraph">
@@ -309,8 +309,8 @@
           Campbell, ACT 2612
         </p>
         <div class="mt-5"></div>
-        <a href="mailto:enquiries@fiveeyes.com.au" class="footer__label"
-          data-animation="paragraph">enquiries@fiveeyes.com.au</a>
+        <a href="mailto:contact@fiveeyes.com.au" class="footer__label"
+          data-animation="paragraph">contact@fiveeyes.com.au</a>
       </div>
 
       <div class="footer__socials">
@@ -335,8 +335,8 @@
       <div class="footer__email">
         <p class="footer__title" data-animation="paragraph">Email</p>
 
-        <a href="mailto:enquiries@fiveeyes.com.au" class="footer__label"
-          data-animation="paragraph">enquiries@fiveeyes.com.au</a>
+        <a href="mailto:contact@fiveeyes.com.au" class="footer__label"
+          data-animation="paragraph">contact@fiveeyes.com.au</a>
       </div>
 
       <div class="footer__partners">
