--- a/aboutus.html
+++ b/aboutus.html
@@ -112,7 +112,7 @@
 
           <section class="background">
             <h3 class="background__title" data-animation="paragraph">
-              <span>01.</span> Our Values <img src="./assets/about_icon4.svg" alt="icon" style="width: 25px;">
+              <span>01.</span> Our Values <img src="./assets/about_icon4.svg" alt="icon">
             </h3>
 
             <h3 class="background__label" data-animation="paragraph">
@@ -154,8 +154,8 @@
           </section>
 
           <section class="reasons">
-            <h4 class="reasons__title" data-animation="paragraph">
-              Our services & reasons:
+            <h4 class="reasons__title background__title" data-animation="paragraph">
+              <span>02.</span>Our services & reasons:
             </h4>
 
             <h3 class="reasons__label" data-animation="paragraph">
