--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
             <img src="./assets/logo-white.png" alt="Five Eyes Logo" class="navigation__logo__dark" /></a>
 
 
-            <div class="navigation__links">
-              <a href="./aboutus.html" class="navigation__link">About Us</a>
-              <a href="./services.html" class="navigation__link">Services</a>
-              <a href="./careers.html" class="navigation__link">Careers</a>
-              <a href="./news.html" class="navigation__link">News</a>
-              <a href="./contactus.html" class="navigation__link">Contact Us</a>
-              <!-- <a href="mailto:contact@fiveeyes.com.au" class="navigation__button">Get in touch</a> -->
-            </div>
+          <div class="navigation__links">
+            <a href="./aboutus.html" class="navigation__link">About Us</a>
+            <a href="./services.html" class="navigation__link">Services</a>
+            <a href="./careers.html" class="navigation__link">Careers</a>
+            <a href="./news.html" class="navigation__link">News</a>
+            <a href="./contactus.html" class="navigation__link">Contact Us</a>
+            <!-- <a href="mailto:contact@fiveeyes.com.au" class="navigation__button">Get in touch</a> -->
+          </div>
         </nav>
 
         <div class="content" data-template="home">
@@ -80,7 +80,9 @@
                     Build a <span>Career</span> with Us / Join our team
                   </h1>
                   <p class="home__para" data-animation="paragraph">
-                    Five Eyes Consulting is an organisation built on the pillars of community and culture. We have created an atmosphere where self-development and innovation are encouraged, and where your career aspirations will be supported.
+                    Five Eyes Consulting is an organisation built on the pillars of community and culture. We have
+                    created an atmosphere where self-development and innovation are encouraged, and where your career
+                    aspirations will be supported.
                   </p>
                   <a href="/aboutus.html" data-animation="paragraph" class="home__link">Learn more</a>
                 </div>
@@ -94,7 +96,7 @@
                   </p>
                   <a href="/aboutus.html" data-animation="paragraph" class="home__link">Learn more</a>
                 </div>
-                
+
               </div>
 
 
@@ -124,7 +126,6 @@
                     </b>
                   </div>
                   </p>
-
                 </div>
 
                 <canvas class="services__grid__item__canvas" id="cyber__sec__canvas"></canvas>
@@ -145,7 +146,6 @@
                     </b>
                   </div>
                   </p>
-
                 </div>
 
                 <canvas class="services__grid__item__canvas" id="network__serv__canvas"></canvas>
@@ -167,128 +167,240 @@
                       <a href="#.">Learn more</a>
                     </b>
                   </div>
-
                   </p>
-
                 </div>
 
                 <canvas class="services__grid__item__canvas" id="cloud__comp__canvas"></canvas>
 
                 <span class="services__grid__item__line"></span>
               </div>
-
-
-              <!-- <div class="services__grid__item">
-                <div class="services__grid__item__info">
-                  <h2 class="services__grid__item__title">Cyber Security</h2>
-
-                  <p class="services__grid__item__label" data-animation="paragraph">
-                    Regardless of size, your organisation’s systems, networks,
-                    programs and data are always vulnerable to unauthorised
-                    exploitation and cyber-attacks. We strive to reduce this
-                    vulnerability and risk by designing personalised IT
-                    security solutions and protocols, ensuring your business
-                    puts its best foot into the future.
-                  </p>
-                </div>
-
-                <canvas class="services__grid__item__canvas" id="security_aud__canvas"></canvas>
-
-                <span class="services__grid__item__line"></span>
-              </div> -->
             </div>
           </section>
 
+
+          <section class="background bg-white">
+            <div class="owl-carousel owl-theme" id="partners_slider">
+              <!-- 1 -->
+              <div class="item">
+                <img src="./assets/cisco.png" alt="Cisco" />
+              </div>
+              <!-- 1 -->
+              <div class="item">
+                <img src="./assets/cisco.png" alt="Cisco" />
+              </div>
+              <!-- 1 -->
+              <div class="item">
+                <img src="./assets/cisco.png" alt="Cisco" />
+              </div>
+              <!-- 1 -->
+              <div class="item">
+                <img src="./assets/cisco.png" alt="Cisco" />
+              </div>
+              <!-- 1 -->
+              <div class="item">
+                <img src="./assets/cisco.png" alt="Cisco" />
+              </div>
+              <!-- 1 -->
+              <div class="item">
+                <img src="./assets/cisco.png" alt="Cisco" />
+              </div>
+              <!-- 1 -->
+              <div class="item">
+                <img src="./assets/cisco.png" alt="Cisco" />
+              </div>
+            </div>
+          </section>
+
+
+
+
           <section class="news">
             <div class="news__title__wrapper">
-              <hi class="news__title" data-animation="title">Featured Articles</hi>
+              <hi class="news__title" data-animation="title">Five Eyes News</hi>
             </div>
 
-            <div class="news__grid">
-              <a href="./blog-post.html" class="news__grid__item">
-                <figure class="news__grid__item__media">
-                  <img class="news__grid__item__media__image" src="./assets/news.jpg" alt="News Cover"
-                    crossorigin="anonymous" />
-                </figure>
+            <div class="owl-carousel owl-theme" id="news_slider">
+              <!-- 1 -->
+              <div class="item">
+                <a href="./blog-post.html" class="news__grid__item">
+                  <figure class="news__grid__item__media">
+                    <img class="news__grid__item__media__image" src="./assets/news.jpg" alt="News Cover"
+                      crossorigin="anonymous" />
+                  </figure>
 
-                <h3 class="news__grid__item__title">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit
-                  adipiscing dolor.
-                </h3>
+                  <h3 class="news__grid__item__title">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                    adipiscing dolor.
+                  </h3>
 
-                <p class="news__grid__item__label" data-animation="paragraph">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                  adipiscing ipsum dolor sit amet. Lorem ipsum dolor sit amet,
-                  consectetur adipiscing elit, adipiscing ipsum dolor sit
-                  amet.
-                </p>
+                  <p class="news__grid__item__label" data-animation="paragraph">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    adipiscing ipsum dolor sit amet. Lorem ipsum dolor sit amet,
+                    consectetur adipiscing elit, adipiscing ipsum dolor sit
+                    amet.
+                  </p>
 
-                <span class="news__grid__item__line"></span>
-              </a>
+                </a>
+              </div>
+              <!-- 2 -->
+              <div class="item">
+                <a href="./blog-post.html" class="news__grid__item">
+                  <figure class="news__grid__item__media">
+                    <img class="news__grid__item__media__image" src="./assets/news.jpg" alt="News Cover"
+                      crossorigin="anonymous" />
+                  </figure>
 
-              <a href="./blog-post.html" class="news__grid__item">
-                <figure class="news__grid__item__media">
-                  <img class="news__grid__item__media__image" src="./assets/news.jpg" alt="News Cover"
-                    crossorigin="anonymous" />
-                </figure>
+                  <h3 class="news__grid__item__title">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                    adipiscing dolor.
+                  </h3>
 
-                <h3 class="news__grid__item__title">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit
-                  adipiscing dolor.
-                </h3>
+                  <p class="news__grid__item__label" data-animation="paragraph">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    adipiscing ipsum dolor sit amet. Lorem ipsum dolor sit amet,
+                    consectetur adipiscing elit, adipiscing ipsum dolor sit
+                    amet.
+                  </p>
 
-                <p class="news__grid__item__label" data-animation="paragraph">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                  adipiscing ipsum dolor sit amet. Lorem ipsum dolor sit amet,
-                  consectetur adipiscing elit, adipiscing ipsum dolor sit
-                  amet.
-                </p>
 
-                <span class="news__grid__item__line"></span>
-              </a>
+                </a>
+              </div>
+              <!-- 3 -->
+              <div class="item">
+                <a href="./blog-post.html" class="news__grid__item">
+                  <figure class="news__grid__item__media">
+                    <img class="news__grid__item__media__image" src="./assets/news.jpg" alt="News Cover"
+                      crossorigin="anonymous" />
+                  </figure>
 
-              <a href="./blog-post.html" class="news__grid__item">
-                <figure class="news__grid__item__media">
-                  <img class="news__grid__item__media__image" src="./assets/news.jpg" alt="News Cover"
-                    crossorigin="anonymous" />
-                </figure>
+                  <h3 class="news__grid__item__title">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                    adipiscing dolor.
+                  </h3>
 
-                <h3 class="news__grid__item__title">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit
-                  adipiscing dolor.
-                </h3>
+                  <p class="news__grid__item__label" data-animation="paragraph">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    adipiscing ipsum dolor sit amet. Lorem ipsum dolor sit amet,
+                    consectetur adipiscing elit, adipiscing ipsum dolor sit
+                    amet.
+                  </p>
 
-                <p class="news__grid__item__label" data-animation="paragraph">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                  adipiscing ipsum dolor sit amet. Lorem ipsum dolor sit amet,
-                  consectetur adipiscing elit, adipiscing ipsum dolor sit
-                  amet.
-                </p>
 
-                <span class="news__grid__item__line"></span>
-              </a>
+                </a>
+              </div>
 
-              <a href="./blog-post.html" class="news__grid__item">
-                <figure class="news__grid__item__media">
-                  <img class="news__grid__item__media__image" src="./assets/news.jpg" alt="News Cover"
-                    crossorigin="anonymous" />
-                </figure>
+              <!-- 4 -->
+              <div class="item">
+                <a href="./blog-post.html" class="news__grid__item">
+                  <figure class="news__grid__item__media">
+                    <img class="news__grid__item__media__image" src="./assets/news.jpg" alt="News Cover"
+                      crossorigin="anonymous" />
+                  </figure>
 
-                <h3 class="news__grid__item__title">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit
-                  adipiscing dolor.
-                </h3>
+                  <h3 class="news__grid__item__title">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                    adipiscing dolor.
+                  </h3>
 
-                <p class="news__grid__item__label" data-animation="paragraph">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                  adipiscing ipsum dolor sit amet. Lorem ipsum dolor sit amet,
-                  consectetur adipiscing elit, adipiscing ipsum dolor sit
-                  amet.
-                </p>
+                  <p class="news__grid__item__label" data-animation="paragraph">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    adipiscing ipsum dolor sit amet. Lorem ipsum dolor sit amet,
+                    consectetur adipiscing elit, adipiscing ipsum dolor sit
+                    amet.
+                  </p>
 
-                <span class="news__grid__item__line"></span>
-              </a>
+
+                </a>
+              </div>
+
             </div>
+
+
+            <!-- <div class="news__grid">
+              <a href="./blog-post.html" class="news__grid__item">
+                <figure class="news__grid__item__media">
+                  <img class="news__grid__item__media__image" src="./assets/news.jpg" alt="News Cover"
+                    crossorigin="anonymous" />
+                </figure>
+
+                <h3 class="news__grid__item__title">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                  adipiscing dolor.
+                </h3>
+
+                <p class="news__grid__item__label" data-animation="paragraph">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                  adipiscing ipsum dolor sit amet. Lorem ipsum dolor sit amet,
+                  consectetur adipiscing elit, adipiscing ipsum dolor sit
+                  amet.
+                </p>
+
+                <span class="news__grid__item__line"></span>
+              </a>
+
+              <a href="./blog-post.html" class="news__grid__item">
+                <figure class="news__grid__item__media">
+                  <img class="news__grid__item__media__image" src="./assets/news.jpg" alt="News Cover"
+                    crossorigin="anonymous" />
+                </figure>
+
+                <h3 class="news__grid__item__title">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                  adipiscing dolor.
+                </h3>
+
+                <p class="news__grid__item__label" data-animation="paragraph">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                  adipiscing ipsum dolor sit amet. Lorem ipsum dolor sit amet,
+                  consectetur adipiscing elit, adipiscing ipsum dolor sit
+                  amet.
+                </p>
+
+                <span class="news__grid__item__line"></span>
+              </a>
+
+              <a href="./blog-post.html" class="news__grid__item">
+                <figure class="news__grid__item__media">
+                  <img class="news__grid__item__media__image" src="./assets/news.jpg" alt="News Cover"
+                    crossorigin="anonymous" />
+                </figure>
+
+                <h3 class="news__grid__item__title">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                  adipiscing dolor.
+                </h3>
+
+                <p class="news__grid__item__label" data-animation="paragraph">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                  adipiscing ipsum dolor sit amet. Lorem ipsum dolor sit amet,
+                  consectetur adipiscing elit, adipiscing ipsum dolor sit
+                  amet.
+                </p>
+
+                <span class="news__grid__item__line"></span>
+              </a>
+
+              <a href="./blog-post.html" class="news__grid__item">
+                <figure class="news__grid__item__media">
+                  <img class="news__grid__item__media__image" src="./assets/news.jpg" alt="News Cover"
+                    crossorigin="anonymous" />
+                </figure>
+
+                <h3 class="news__grid__item__title">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                  adipiscing dolor.
+                </h3>
+
+                <p class="news__grid__item__label" data-animation="paragraph">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                  adipiscing ipsum dolor sit amet. Lorem ipsum dolor sit amet,
+                  consectetur adipiscing elit, adipiscing ipsum dolor sit
+                  amet.
+                </p>
+
+                <span class="news__grid__item__line"></span>
+              </a>
+            </div> -->
 
             <div class="news__grid__button__wrapper">
               <a href="#" class="news__grid__button">See all news</a>
@@ -363,24 +475,10 @@
 
   <script src="./app/index.js" type="module"></script>
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+  <script src="./app/script.js"></script>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-<script>
-  $(function() {
-  // Owl Carousel
-  var owl = $("#home_slider");
-  owl.owlCarousel({
-    items: 1,
-    margin: 10,
-    loop: true,
-    nav: true
-  });
-});
-
-</script>
 </body>
 
 </html>
