--- a/index.html
+++ b/index.html
@@ -141,7 +141,11 @@
                   </p>
                 </div>
 
-                <canvas class="services__grid__item__canvas" id="cyber__sec__canvas"></canvas>
+                <lottie-player style="padding-top: 20px;" class="services__grid__item__canvas" src="lotties/CyberSecurity.json" background="transparent"
+                    speed="1" loop autoplay>
+                </lottie-player>
+
+                <!-- <canvas class="services__grid__item__canvas" id="cyber__sec__canvas"></canvas> -->
 
                 <span class="services__grid__item__line"></span>
               </div>
@@ -161,7 +165,12 @@
                   </p>
                 </div>
 
-                <canvas class="services__grid__item__canvas" id="network__serv__canvas"></canvas>
+                <lottie-player style="padding-top: 20px;" class="services__grid__item__canvas" src="lotties/Technology.json" background="transparent"
+                    speed="1" loop autoplay>
+                </lottie-player>
+
+                <!-- <canvas class="services__grid__item__canvas" id="network__serv__canvas"></canvas> -->
+                
 
                 <span class="services__grid__item__line"></span>
               </div>
@@ -183,7 +192,12 @@
                   </p>
                 </div>
 
-                <canvas class="services__grid__item__canvas" id="cloud__comp__canvas"></canvas>
+                <lottie-player style="padding-top: 20px;" class="services__grid__item__canvas" src="lotties/ProjectDelivery.json" background="transparent"
+                    speed="1" loop autoplay>
+                </lottie-player>
+
+
+                <!-- <canvas class="services__grid__item__canvas" id="cloud__comp__canvas"></canvas> -->
 
                 <span class="services__grid__item__line"></span>
               </div>
@@ -485,6 +499,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
   <script src="./app/script.js"></script>
 
 </body>
