--- a/index.html
+++ b/index.html
@@ -212,32 +212,41 @@
             <div class="owl-carousel owl-theme" id="partners_slider">
               <!-- 1 -->
               <div class="item">
-                <img src="./assets/cisco.png" alt="Cisco" />
+                <img src="./assets/icpm.png" alt="icpm" style="width: 60%; margin: auto;" />
               </div>
-              <!-- 1 -->
+              <!-- 2 -->
               <div class="item">
-                <img src="./assets/cisco.png" alt="Cisco" />
+                <img src="./assets/Tanium.png" alt="Tanium" />
               </div>
-              <!-- 1 -->
+              <!-- 3 -->
               <div class="item">
-                <img src="./assets/cisco.png" alt="Cisco" />
+                <img src="./assets/fortinet-logo.svg" alt="fortinet" />
               </div>
-              <!-- 1 -->
+              <!-- 4 -->
               <div class="item">
-                <img src="./assets/cisco.png" alt="Cisco" />
+                <img src="./assets/microsoft.png" alt="microsoft" />
               </div>
-              <!-- 1 -->
+              <!-- 5 -->
               <div class="item">
-                <img src="./assets/cisco.png" alt="Cisco" />
+                <img src="./assets/aws.png" alt="AWS" style="width: 50%; margin: auto;" />
               </div>
-              <!-- 1 -->
+              <!-- 6 -->
               <div class="item">
-                <img src="./assets/cisco.png" alt="Cisco" />
+                <img src="./assets/cisco.png" alt="Cisco" style="width: 80%; margin: auto;" />
               </div>
-              <!-- 1 -->
+              <!-- 7 -->
               <div class="item">
-                <img src="./assets/cisco.png" alt="Cisco" />
+                <img src="./assets/solderOn.png" alt="solderOn" />
               </div>
+              <!-- 8 -->
+              <div class="item">
+                <img src="./assets/elastic-logo.svg" alt="elastic" />
+              </div>
+              <!-- 9 -->
+              <div class="item">
+                <img src="./assets/Tenable_Logo.jpg" alt="Tenable" />
+              </div>
+
             </div>
           </section>
 
