--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
           </section>
 
 
+          <!-- partners slider -->
           <section class="background bg-white">
             <div class="services__title__wrapper">
               <hi class="services__title" data-animation="title">Partners</hi>
