--- a/aboutus.html
+++ b/aboutus.html
@@ -37,13 +37,27 @@
           <a href="./">
             <img src="./assets/logo.png" alt="Five Eyes Logo" class="navigation__logo__dark" /></a>
 
-          <div class="navigation__links">
-            <a href="./aboutus.html" class="navigation__link">About Us</a>
-            <a href="./services.html" class="navigation__link">Services</a>
-            <a href="./careers.html" class="navigation__link">Careers</a>
-            <a href="./news.html" class="navigation__link">News</a>
-            <a href="./contactus.html" class="navigation__link">Contact Us</a>
-          </div>
+            <div class="navigation__links">
+              <a href="./aboutus.html" class="navigation__link">About Us</a>
+              <div>
+                <a href="javascript:void(0);" class="navigation__link">Services <i class="fa-solid fa-angle-down"></i></a>
+                <ul>
+                  <li>
+                    <a href="./cyber_security.html" class="navigation__link">Cyber security</a>
+                  </li>
+                  <li>
+                    <a href="./technology.html" class="navigation__link">Technology and architecture</a>
+                  </li>
+                  <li>
+                    <a href="./project_delivery.html" class="navigation__link">Project Delivery</a>
+                  </li>
+                </ul>
+              </div>
+              <a href="./careers.html" class="navigation__link">Careers</a>
+              <a href="./news.html" class="navigation__link">News</a>
+              <a href="./contactus.html" class="navigation__link">Contact Us</a>
+              <!-- <a href="mailto:contact@fiveeyes.com.au" class="navigation__button">Get in touch</a> -->
+            </div>
         </nav>
 
         <div class="content" data-template="about">
