--- a/contactus.html
+++ b/contactus.html
@@ -58,7 +58,7 @@
                 do eiusmod tempor incididunt ut labore.
               </p>
 
-              <canvas class="contacts__canvas"></canvas>
+              <!-- <canvas class="contacts__canvas"></canvas> -->
             </div>
 
             <div class="contacts__footer">
