--- a/news.html
+++ b/news.html
@@ -39,10 +39,24 @@
 
             <div class="navigation__links">
               <a href="./aboutus.html" class="navigation__link">About Us</a>
-              <a href="./services.html" class="navigation__link">Services</a>
+              <div>
+                <a href="javascript:void(0);" class="navigation__link">Services <i class="fa-solid fa-angle-down"></i></a>
+                <ul>
+                  <li>
+                    <a href="./cyber_security.html" class="navigation__link">Cyber security</a>
+                  </li>
+                  <li>
+                    <a href="./technology.html" class="navigation__link">Technology and architecture</a>
+                  </li>
+                  <li>
+                    <a href="./project_delivery.html" class="navigation__link">Project Delivery</a>
+                  </li>
+                </ul>
+              </div>
               <a href="./careers.html" class="navigation__link">Careers</a>
               <a href="./news.html" class="navigation__link">News</a>
               <a href="./contactus.html" class="navigation__link">Contact Us</a>
+              <!-- <a href="mailto:contact@fiveeyes.com.au" class="navigation__button">Get in touch</a> -->
             </div>
         </nav>
 
@@ -167,6 +181,52 @@
             </div>
           </section>
 
+          <!-- partners slider -->
+          <section class="background bg-white">
+            <div class="services__title__wrapper">
+              <hi class="services__title" data-animation="title">Partners</hi>
+            </div>
+            <div class="owl-carousel owl-theme" id="partners_slider">
+              <!-- 1 -->
+              <div class="item">
+                <img src="./assets/icpm.png" alt="icpm" style="width: 60%; margin: auto;" />
+              </div>
+              <!-- 2 -->
+              <div class="item">
+                <img src="./assets/Tanium.png" alt="Tanium" />
+              </div>
+              <!-- 3 -->
+              <div class="item">
+                <img src="./assets/fortinet-logo.svg" alt="fortinet" />
+              </div>
+              <!-- 4 -->
+              <div class="item">
+                <img src="./assets/microsoft.png" alt="microsoft" />
+              </div>
+              <!-- 5 -->
+              <div class="item">
+                <img src="./assets/aws.png" alt="AWS" style="width: 50%; margin: auto;" />
+              </div>
+              <!-- 6 -->
+              <div class="item">
+                <img src="./assets/cisco.png" alt="Cisco" style="width: 80%; margin: auto;" />
+              </div>
+              <!-- 7 -->
+              <div class="item">
+                <img src="./assets/solderOn.png" alt="solderOn" />
+              </div>
+              <!-- 8 -->
+              <div class="item">
+                <img src="./assets/elastic-logo.svg" alt="elastic" />
+              </div>
+              <!-- 9 -->
+              <div class="item">
+                <img src="./assets/Tenable_Logo.jpg" alt="Tenable" />
+              </div>
+
+            </div>
+          </section>
+
           <footer class="footer">
             <div class="footer__information">
               <div class="footer__location">
@@ -209,22 +269,14 @@
 
                 <a href="mailto:contact@fiveeyes.com.au" class="footer__label"
                   data-animation="paragraph">contact@fiveeyes.com.au</a>
+
+                <br><br>
+                <a href="./">
+                  <img src="./assets/logo.png" alt="Five Eyes Logo" class="navigation__logo__dark" />
+                </a>
+
               </div>
 
-              <div class="footer__partners">
-                <p class="footer__title" data-animation="paragraph">
-                  Partners
-                </p>
-
-                <div class="footer__images__grid">
-                  <img class="footer__images__grid__image" src="./assets/cisco.png" alt="Cisco"
-                    crossorigin="anonymous" />
-                  <img class="footer__images__grid__image" src="./assets/microsoft.png" alt="Cisco"
-                    crossorigin="anonymous" />
-                  <img class="footer__images__grid__image" src="./assets/amazon.png" alt="Cisco"
-                    crossorigin="anonymous" />
-                </div>
-              </div>
 
             </div>
           </footer>
@@ -234,6 +286,12 @@
   </div>
 
   <script src="./app/index.js" type="module"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+  <script src="./app/script.js"></script>
+
 </body>
 
 </html>
